<resources>
    <string name="app_name">UT Fantasy</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="account">Account</string>
    <string name="register">register</string>
    <string name="save">Save</string>
    <string name="menu">MENU</string>
    <string name="myBag">MY BAG</string>
    <string name="remember_password">remember password</string>
    <string name="logo">logo of UTFantasy</string>
    <string name="game_start">Game Start</string>
    <string name="score_board">Score Board</string>
    <string name="leave">Leave</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="newPlayerName">What is your name?</string>
    <string name="newPlayerGender">Are you a boy or a girl?</string>
    <string name="newPlayerInstruction">click A or B to continue</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="boy">boy</string>
    <string name="girl">girl</string>
    <string name="go">GO!</string>
    <string name="cancel">Cancel</string>
    <string name="name_gender">Name(Gender)</string>
    <string name="pokemonNum">PokemonNum</string>
    <string name="pokemonLevel">PokemonLV</string>
    <string name="level">level</string>
    <string name="idk">idk</string>
    <string name="pokeNum">pokeNum</string>
    <string name="scoreboardLogo">ScoreboardLogo</string>
    <string name="_1">1.</string>
    <string name="num">Num</string>
    <string name="name">name</string>
    <string name="showingScore">Show score on the ScoreBoard</string>
    <string name="percentile">Percentile</string>
    <string name="profilePic">profilePic</string>
    <string name="duan_liu">Duan Liu</string>
    <string name="yizhen_wang">Yizhen Wang</string>
    <string name="yexiong_xu">Yexiong Xu</string>
    <string name="qinxi_yu">Qinxi Yu</string>
    <string name="yan_zhou">Yan Zhou</string>
    <string name="producers">~Producers~</string>
    <string name="press_here_to_continue">press here to continue</string>
    <string name="description">Description</string>
    <string name="username">username</string>
    <string name="price">price</string>
    <string name="productName">Product Name</string>
    <string name="add1">ADD 1</string>
    <string name="add10">ADD 10</string>
    <string name="enterAmount">Enter amount</string>
    <string name="apply">APPLY</string>
    <string name="buy">BUY!</string>
    <string name="numInBag">Number in bag:</string>
    <string name="amountSelected">Amount selected:</string>
    <string name="moneyInBag">Money in bag:</string>
    <string name="total">Total selected:</string>
    <string name="congrads">congrads</string>


</resources>
