<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">


    <LinearLayout
        android:layout_width="697dp"
        android:layout_height="114dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/account"
            android:inputType="text" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="286dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="146dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="150dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="146dp"
        android:layout_height="72dp"
        android:layout_alignStart="@+id/btn_register"
        android:layout_alignTop="@+id/btn_register"
        android:layout_alignEnd="@+id/btn_register"
        android:layout_alignBottom="@+id/btn_register"
        android:layout_marginStart="211dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-221dp"
        android:layout_marginBottom="0dp"
        android:text="@string/login" />

</RelativeLayout>