<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/check"
        android:contentDescription="@string/score_board">

    </ImageView>

    <TextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignTop="@+id/playerName"
        android:layout_marginStart="45dp"
        android:layout_marginTop="0dp"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/playerName"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/rank"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/pokemonNum"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_alignStart="@+id/playerName"
        android:layout_alignTop="@+id/playerName"
        android:layout_marginStart="150dp"
        android:layout_marginTop="0dp"
        android:text="@string/num"
        android:textColor="#FFFFFF"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/pokemonLV"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_alignStart="@+id/pokemonNum"
        android:layout_alignTop="@+id/playerName"
        android:layout_marginStart="115dp"
        android:layout_marginTop="0dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold">

    </TextView>

</RelativeLayout>