<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/backToStartUp"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/logout"
        android:layout_alignStart="@+id/logout"
        android:layout_alignEnd="@+id/logout"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/text_box"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/logout"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/save"
        android:layout_alignStart="@+id/save"
        android:layout_alignEnd="@+id/save"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/text_box"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="274dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/text_box"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>